--- a/styles/layout.module.sass
+++ b/styles/layout.module.sass
@@ -2,6 +2,7 @@
   margin-top: 80px
   display: flex
   justify-content: center
+  color: #ddd
   @media (max-width: 720px) 
     margin-top: 130px
   
@@ -22,4 +23,3 @@
   align-items: center
   justify-content: flex-start
   width: 500px
-  color: #333
