--- a/styles/input.module.sass
+++ b/styles/input.module.sass
@@ -22,23 +22,24 @@
       font-weight: bold
       padding: 0 4px 0 6px
       font-size: 12px
-      transform: translate(24px, -42px)
+      transform: translate(6px, -30px)
       background-color: black
 
 .label
+  margin-left:18px
   font-size: 16px
   letter-spacing: 0.5px
   font-weight: 300
   position: absolute
   pointer-events: none
   transition: all ease-out 0.14s
-  transform: translate(20px, -12px)
+  // transform: translate(20px, -12px)
 
-.errorContainer 
-  bottom: 6px
-  margin-left: 2px
-  min-height: 18px
-  z-index: 1
+// .errorContainer 
+//   bottom: 6px
+//   margin-left: 2px
+//   min-height: 18px
+//   z-index: 1
 
 // .error 
 //   color: red
