--- a/styles/postNews.module.sass
+++ b/styles/postNews.module.sass
@@ -12,13 +12,14 @@
   letter-spacing: 0.933333px
   padding: 10px 0 32px 0
 
-.row
-  display: flex
-  justify-content: space-between
+// .row
+//   display: flex
+//   justify-content: space-between
 
 .responsiveRow
   display: flex
   justify-content: space-between
+  align-items: center
   @media (max-width: 420px)
     flex-direction: column
     align-items: center
