--- a/components/Searchbar/searchbar.module.sass
+++ b/components/Searchbar/searchbar.module.sass
@@ -32,23 +32,23 @@
   overflow-y: hidden
   color: white
 
-// .resultAnchor
-//   display: flex
-//   align-items: center
-//   justify-content: flex-start
-//   margin: 10px
-//   min-height: 40px
-//   cursor: pointer
+.resultAnchor
+  display: flex
+  align-items: center
+  justify-content: flex-start
+  margin: 10px
+  min-height: 40px
+  cursor: pointer
 
-// .roundImage
-//   object-fit: cover
-//   border-radius: 999px
-//   width: 40px
-//   min-width: 40px
-//   height: 40px
-//   border: 1px solid #e8e8e8
+.roundImage
+  object-fit: cover
+  border-radius: 999px
+  // width: 40px
+  // min-width: 40px
+  // height: 40px
+  border: 1px solid #e8e8e8
 
-// .text
-//   margin-left: 10px
-//   color: white
+.text
+  margin-left: 10px
+  color: white
 
