--- a/components/Header/header.module.sass
+++ b/components/Header/header.module.sass
@@ -25,10 +25,14 @@
     width: 28px
     height: 28px
 
+.logoText
+  margin-left: 8px
+  @media (max-width: 720px) 
+    display: none
 
 .middleNavbar
   width: 500px
   display: flex
-  @media (max-width: 600px) 
+  @media (max-width: 720px) 
     padding-right: 16px
   
