--- a/components/Searchbar/searchbar.module.sass
+++ b/components/Searchbar/searchbar.module.sass
@@ -1,6 +1,7 @@
 .container
   position: relative
-  background: #353535
+  // background: #353535
+  background: #262626
   height: 32px
   width: 100%
   border-radius: 999px
