--- a/components/Header/header.module.sass
+++ b/components/Header/header.module.sass
@@ -3,7 +3,8 @@
   display: flex
   align-items: center
   justify-content: center
-  background-color: #202020
+  // background-color: rgb(32, 32, 32)
+  background-color: #181818
   top: 0px
   width: 100%
   height: 60px
