--- a/components/News/news.module.sass
+++ b/components/News/news.module.sass
@@ -1,6 +1,6 @@
 .container
   color: white
-  background-color: #282828
+  background-color: #181818
   margin-bottom: 20px
 
 .image
@@ -11,14 +11,14 @@
   display: flex
   align-items: center
   margin-top: -4px
-  height: 46px
   padding: 8px 10px
   word-break: break-all
-  background-color: #114
+  background-color: #282828
   font-size: 12px
   font-weight: 500
   color: #ddd
   line-height: 14px
+  padding: 10px
   @media (max-width: 500px)
     font-size: 11.5px
 
@@ -34,7 +34,6 @@
 
 .softTitle
   font-size: 15px
-  margin-bottom: 10px
   @media (max-width: 500px)
     font-size: 14px
 
