--- a/components/UserImage/userImage.module.sass
+++ b/components/UserImage/userImage.module.sass
@@ -3,21 +3,17 @@
   justify-content: center
   margin-top: 40px
 
-// export const Circle = styled.div`
-//   width: 88px;
-//   height: 88px;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// `
+.circle
+  width: 88px
+  height: 88px
+  display: flex
+  align-items: center
+  justify-content: center
 
-// export const Image = styled.img`
-//   object-fit: cover;
-//   border-radius: 999px;
-//   width: 88px;
-//   height: 88px;
-//   cursor: pointer;
-// `
+.image
+  object-fit: cover
+  border-radius: 50%
+  cursor: pointer
 
 .noUser
   border-radius: 999px
